[project]
name = "ErisPulse-MsgCounter"
version = "1.0.11"
description = "ErisPulse 框架的消息计数器模块"
requires-python = ">=3.9"
readme = "README.md"
authors = [
    {name = "Teddyxiongtdx"},
]

dependencies = [
]

[project.urls]
Homepage = "https://github.com/Teddyxiongtdx/YBot-Ep-MsgCounter"

[tool.setuptools]
packages = ["ErisPulse_MsgCounter"]

[project.entry-points."erispulse.module"]
"MsgCounter" = "ErisPulse_MsgCounter:Main"